// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expressions > arithmetics > handles chained math with precedence 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": -1,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Pow",
    },
    {
      "arg1": 4,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "code": "Mod",
    },
    {
      "code": "Div",
    },
    {
      "code": "Sub",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > and 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "And",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > and short-circuit 1`] = `
{
  "main": [
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "whatever",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "And",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > compare 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "arg1": 456,
      "code": "Const",
    },
    {
      "code": "Lt",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > deep eq 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "DeepEq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq ref 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq ref 2 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > in 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "key",
        "symbol": "atom:key",
      },
      "code": "Const",
    },
    {
      "arg1": {
        "name": "key",
        "symbol": "atom:key",
      },
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "name": "key2",
        "symbol": "atom:key2",
      },
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Record",
    },
    {
      "code": "In",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > not on boolean 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > not on not boolean 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > or 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "Or",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > or short-circuit 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "whatever",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Or",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > function call multiple args 1`] = `
{
  "fn_34": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_34",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 2,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > immediately invoked function expression (iife) 1`] = `
{
  "fn_17": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_17",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_23",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_23",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > pipe 1`] = `
{
  "fn_30": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_40": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_40",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_44",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_30",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_45",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_44",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > return from function 1`] = `
{
  "fn_62": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_62",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_68",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_68",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > Y combinator computes factorial 1`] = `
{
  "fn_183": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_272",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_272",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_273",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_273",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_185": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_271",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_183",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_271",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_213": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_275",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_275",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_276",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_276",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_215": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_274",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_213",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_274",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_217": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_185",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_270",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_215",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_270",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_262": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 23,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_277",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_277",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Return",
    },
  ],
  "fn_263": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_262",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_217",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_269",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_263",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_269",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_278",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_278",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > Y combinator computes fibonacci 1`] = `
{
  "fn_195": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_298",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_298",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_299",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_299",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_197": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_297",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_195",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_297",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_225": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_301",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_301",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_302",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_302",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_227": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_300",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_225",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_300",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_229": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_197",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_296",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_227",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_296",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_288": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "arg1": 39,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 16,
      "code": "JumpIfFalse",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 39,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_303",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_303",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_304",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_304",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_289": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_288",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_229",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_295",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_289",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_295",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_305",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_305",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > apply combinator 1`] = `
{
  "fn_61": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_75",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_75",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_62": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_61",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_67": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_62",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_74",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_67",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_74",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_76",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_76",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > church pair returns first element 1`] = `
{
  "fn_100": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_101": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_100",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_83": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_84": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_83",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_85": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_84",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_85",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_101",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > church pair returns second element 1`] = `
{
  "fn_100": [
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_101": [
    {
      "arg1": "fn_100",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_83": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_105",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_106",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_84": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_83",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_85": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_84",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_85",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_104",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_107",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_101",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_108",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > deeply nested closures capture outer bindings 1`] = `
{
  "fn_55": [
    {
      "arg1": {
        "ref": "z",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "z",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_56": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_55",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_57": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_56",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_57",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_78",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_78",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_79",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_79",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_80",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_80",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > either combinator applies first branch 1`] = `
{
  "fn_109": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_118": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "code": "Return",
    },
  ],
  "fn_94": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_122",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_122",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_95": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_94",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_96": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_95",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_96",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_121",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_121",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_123",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_109",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_123",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_124",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_118",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_124",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > fixed point combinator (Z) builds recursion 1`] = `
{
  "fn_165": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_215",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_215",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_216",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_216",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_167": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_214",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_165",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_214",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_195": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_218",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_218",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_219",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_219",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_197": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_217",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_195",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_217",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_199": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_167",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_213",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_197",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_213",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_205": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_206": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_205",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_199",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_212",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_206",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_212",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_220",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_220",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > mutual recursion (even/odd) with fixed point combinator 1`] = `
{
  "fn_1001": [
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "pair",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1183",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_961",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1183",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1186",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_999",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1186",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1004": [
    {
      "arg1": {
        "ref": "fix",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_874",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1173",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "fix",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1182",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1001",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1182",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1173",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1066": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1191",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1191",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1192",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1192",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1068": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1190",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1066",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1190",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1096": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1194",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1194",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1195",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1195",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1098": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1193",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1096",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1193",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1100": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1068",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1189",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1098",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1189",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1102": [
    {
      "arg1": {
        "ref": "snd",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1004",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1172",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1100",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1172",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1120": [
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1121": [
    {
      "arg1": "fn_1120",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1123": [
    {
      "arg1": {
        "ref": "p",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "p",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1196",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1121",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1196",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1125": [
    {
      "arg1": {
        "ref": "fst",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1102",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1171",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1123",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1171",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1143": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1144": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1143",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1146": [
    {
      "arg1": {
        "ref": "p",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "p",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1197",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1144",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1197",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1148": [
    {
      "arg1": {
        "ref": "pair",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1125",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1170",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1146",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1170",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1164": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1198",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1198",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1199",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1199",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1165": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1164",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_1166": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1165",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_857": [
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1175",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_1175",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1176",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_1176",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1177",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_1177",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1178",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_1178",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": 4,
      "code": "Tuple",
    },
    {
      "code": "Return",
    },
  ],
  "fn_858": [
    {
      "arg1": {
        "ref": "even",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_857",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_874": [
    {
      "arg1": {
        "ref": "even_odd",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_858",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1174",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "fst",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1179",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "even_odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1179",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1174",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1180",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "snd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1181",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "even_odd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1181",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1180",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_961": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": 27,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "snd",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1184",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1184",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1185",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_1185",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "fn_999": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 0,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "arg1": 9,
      "code": "JumpIfFalse",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": 27,
      "code": "Jump",
    },
    {
      "arg1": {
        "ref": "fst",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1187",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "self",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_1187",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "_calltmp_1188",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "arg1": {
        "ref": "_calltmp_1188",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_1148",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1169",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_1166",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_1169",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > partial application keeps captured value 1`] = `
{
  "fn_41": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_42": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_41",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_42",
      "code": "Closure",
    },
    {
      "arg1": {
        "ref": "_calltmp_58",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_58",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "_calltmp_59",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "_calltmp_59",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg2": 1,
      "code": "Call",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > memory ops > alloc stores value and returns it via load 1`] = `
{
  "main": [
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": "alloc",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > memory ops > alloc stores value and returns it via load 2`] = `
{
  "26": 42,
}
`;

exports[`expressions > memory ops > free removes stored value 1`] = `
{
  "main": [
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": "alloc",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "free",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > symbols > creates a named symbol 1`] = `
{
  "main": [
    {
      "arg1": "foo",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > symbols > symbol equality is by identity, atoms are by name 1`] = `
{
  "main": [
    {
      "arg1": "a",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "a",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > atom 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "atom",
        "symbol": "atom:atom",
      },
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > false 1`] = `
{
  "main": [
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > float 1`] = `
{
  "main": [
    {
      "arg1": 123.456,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > integer 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > string 1`] = `
{
  "main": [
    {
      "arg1": "string",
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > string template 1`] = `
{
  "main": [
    {
      "arg1": "hello ",
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Concat",
    },
    {
      "arg1": " world",
      "code": "Const",
    },
    {
      "code": "Concat",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > true 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`vm2 integration > adds two numbers and prints the sum 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": "print",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;
